add file structure

--- a/src/library.html
+++ b/src/library.html
@@ -29,24 +29,8 @@
           <a href="./library.html">My library</a>
         </li>
       </ul>
-      <form class="search-form" id="search-form">
-        <input
-          class="search-input"
-          type="text"
-          name="searchQuery"
-          autocomplete="off"
-          placeholder="Movie search..."
-        />
-        <button class="search-btn" type="submit">
-          <img
-            width="30px"
-            height="30px"
-            class="search-form-icon"
-            src="/src/images/icon-search.png"
-            alt="search"
-          />
-        </button>
-      </form>
+      <button type="button">WATCHED</button>
+      <button type="button">QUEUE</button>
     </header>
     <main>
       <div></div>
