--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
           <button id="popular" type="button">popular</button>
         </div>
         <div>
-          <button id="search" type="button">search</button>
+          <button id="search-btn" type="button">search</button>
         </div>
         <div>
           <button id="by-id" type="button">by-id</button>
