--- a/src/library.html
+++ b/src/library.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header_library">
       <div class="container">
         <div class="header__container">
           <div class="website-title_wrapper">
