--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,22 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer__description">
+          <p>&#169; 2020 | All Rights Reserved |</p>
+          <p class="developers">
+            <span>Developed with</span>
+            <svg class="footer__icon" width="14" height="13">
+              <use href="./images/icons.svg#icon-favorite"></use>
+            </svg>
+            <span
+              >by
+              <a class="developers_link link" href=""> GoIT Students</a></span
+            >
+          </p>
+        </div>
+      </div>
     </footer>
-
     <script type="module" src="./index.js"></script>
   </body>
 </html>
