--- a/src/library.html
+++ b/src/library.html
@@ -33,12 +33,10 @@
           <nav class="navigation">
             <ul class="list navigation__wrapper">
               <li class="navigation__item">
-                <a href="./index.html" class="navigation__link link current"
-                  >Home</a
-                >
+                <a href="./index.html" class="navigation__link link">Home</a>
               </li>
               <li class="navigation__item">
-                <a href="./library.html" class="navigation__link link"
+                <a href="./library.html" class="navigation__link link current"
                   >My library</a
                 >
               </li>
