--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
           <button id="by-id" type="button">by-id</button>
         </div>
       </div>
+
+      <div class="gallery"></div>
     </main>
     <footer class="footer">
       <div class="container">
