--- a/src/library.html
+++ b/src/library.html
@@ -45,6 +45,7 @@
         </div>
         <button type="button">WATCHED</button>
         <button type="button">QUEUE</button>
+        <div class="gallery"></div>
       </div>
     </header>
     <main>
