unsuccessful try to create modal function

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,8 @@
         </div>
       </div>
     </footer>
+
+    <include src="./partials/modal.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
