--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
           <div class="website-title_wrapper">
             <a class="logo" href="./index.html">
               <svg class="logo__icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-logo"></use></svg
-            ></a>
+                <use href="./images/icons.svg#icon-logo"></use></svg>
+              </a>
             <h1 class="main-title">Filmoteka</h1>
           </div>
           <nav class="navigation">
@@ -71,7 +71,9 @@
           <button id="by-id" type="button">by-id</button>
         </div>
 
-        <div class="gallery"></div>
+        <div class="gallery">
+          
+        </div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
       </div>
     </main>
