--- a/src/library.html
+++ b/src/library.html
@@ -43,9 +43,10 @@
             </ul>
           </nav>
         </div>
-        <button type="button">WATCHED</button>
-        <button type="button">QUEUE</button>
-        <div class="gallery"></div>
+        <button class="btn-watched current-btn_library" type="button">
+          WATCHED
+        </button>
+        <button class="btn-queue" type="button">QUEUE</button>
       </div>
     </header>
     <main>
