bug-fix/currentPage/remove-fetch-btn

--- a/src/library.html
+++ b/src/library.html
@@ -33,7 +33,9 @@
           <nav class="navigation">
             <ul class="list navigation__wrapper">
               <li class="navigation__item">
-                <a href="./index.html" class="navigation__link link">Home</a>
+                <a href="./index.html" class="navigation__link link home"
+                  >Home</a
+                >
               </li>
               <li class="navigation__item">
                 <a href="./library.html" class="navigation__link link current"
@@ -53,15 +55,6 @@
       <div class="container">
         <div class="gallery__library-watched"></div>
         <div class="gallery__library-queue"></div>
-        <div>
-          <button id="popular" type="button">popular</button>
-        </div>
-        <div>
-          <button id="search-btn" type="button">search</button>
-        </div>
-        <div>
-          <button id="by-id" type="button">by-id</button>
-        </div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
         <div class="loader is-hidden loader--style3">
           <div class="spiner">
