--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,9 @@
         <div>
           <button id="popular" type="button">popular</button>
         </div>
-        <div>
+        <!-- <div>
           <button id="search-btn" type="button">search</button>
-        </div>
+        </div> -->
         <div>
           <button id="by-id" type="button">by-id</button>
         </div>
