--- a/src/library.html
+++ b/src/library.html
@@ -54,7 +54,7 @@
     <main>
       <div class="container">
         <div class="gallery__library-watched"></div>
-        <div class="gallery__library-queue"></div>
+        <div class="gallery__library-queue visually-hidden"></div>
         <div id="tui-pagination-container" class="tui-pagination"></div>
         <div class="loader is-hidden loader--style3">
           <div class="spiner">
