--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,12 @@
     <header class="header">
       <div class="container">
         <div class="header__container">
-          <div class="website-title_wrapper">
-            <a class="logo" href="./index.html">
-              <svg class="logo__icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-logo"></use></svg
-            ></a>
-            <h1 class="main-title">Filmoteka</h1>
-          </div>
+          <a class="logo" href="" onclick="event.preventDefault()">
+            <svg class="logo__icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+            <h1 class="main-title">Filmoteka</h1></a
+          >
           <nav class="navigation">
             <ul class="list navigation__wrapper">
               <li class="navigation__item">
@@ -75,63 +74,10 @@
       <div class="container">
         <div class="gallery"></div>
         <div class="movie-list"></div>
-        <div id="tui-pagination-container" class="tui-pagination"></div>
-        <div class="loader is-hidden loader--style3">
-          <div class="spiner">
-            <svg
-              version="1.1"
-              id="loader-1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              x="0px"
-              y="0px"
-              width="80px"
-              height="80px"
-              viewBox="0 0 50 50"
-              style="enable-background: new 0 0 50 50"
-              xml:space="preserve"
-            >
-              <path
-                fill="#FF6B08"
-                d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
-              >
-                <animateTransform
-                  attributeType="xml"
-                  attributeName="transform"
-                  type="rotate"
-                  from="0 25 25"
-                  to="360 25 25"
-                  dur="0.6s"
-                  repeatCount="indefinite"
-                />
-              </path>
-            </svg>
-            <br />
-            <span class="spiner_text">Please wait...</span>
-          </div>
-        </div>
+        <include src="./partials/tui_loader.html"></include>
       </div>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer__description">
-          <p>&#169; 2022 | All Rights Reserved |</p>
-          <p class="developers">
-            <span>Developed with</span>
-            <svg class="footer__icon" width="14" height="13">
-              <use href="./images/icons.svg#icon-favorite"></use>
-            </svg>
-            <span
-              >by
-              <a class="developers_link link" href="#" data-team-open>
-                GoIT Students</a
-              ></span
-            >
-          </p>
-        </div>
-      </div>
-    </footer>
-
+    <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/team.html"></include>
     <script type="module" src="./index.js"></script>
