--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
-    <link rel="shortcut icon" href="./images/favicon.ico"/>
+    <link rel="shortcut icon" href="./images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,8 +34,8 @@
           </div>
           <nav class="navigation">
             <ul class="list navigation__wrapper">
-              <li class="navigation__item">               
-               <a
+              <li class="navigation__item">
+                <a
                   href="./index.html"
                   class="navigation__link link current home"
                   >Home</a
@@ -132,7 +132,7 @@
       </div>
     </footer>
     <include src="./partials/modal.html"></include>
-    <include src="./partials/upButton.html"></include>
+    <include src="./partials/upbutton.html"></include>
     <include src="./partials/team.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
