--- a/src/library.html
+++ b/src/library.html
@@ -61,6 +61,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/team.html"></include>
+    <include src="./partials/upbutton.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
