--- a/src/library.html
+++ b/src/library.html
@@ -63,5 +63,10 @@
     <include src="./partials/team.html"></include>
     <include src="./partials/upbutton.html"></include>
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/emptyGallery.js"></script>
   </body>
 </html>
+
+<div>
+  
+</div>
