--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,14 @@
       <div class="container">
         <div class="gallery"></div>
         <div class="movie-list"></div>
+        <div
+          id="tui-pagination-container1"
+          class="tui-pagination pagin-popular"
+        ></div>
+        <div
+          id="tui-pagination-container2"
+          class="tui-pagination pagin-search"
+        ></div>
         <include src="./partials/tui_loader.html"></include>
       </div>
     </main>
