--- a/src/library.html
+++ b/src/library.html
@@ -55,6 +55,14 @@
       <div class="container">
         <div class="gallery__library-watched"></div>
         <div class="gallery__library-queue visually-hidden"></div>
+        <div
+          id="tui-pagination-container1"
+          class="tui-pagination pagin-popular'"
+        ></div>
+        <div
+          id="tui-pagination-container2"
+          class="tui-pagination pagin-search"
+        ></div>
         <include src="./partials/tui_loader.html"></include>
       </div>
     </main>
