--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="container">
         <div class="header__container">
-          <a class="logo" href="" onclick="event.preventDefault()">
+          <a class="logo" href="./index.html">
             <svg class="logo__icon" width="24" height="24">
               <use href="./images/icons.svg#icon-logo"></use>
             </svg>
@@ -73,15 +73,11 @@
     <main>
       <div class="container">
         <div class="gallery"></div>
-        <div class="movie-list"></div>
         <div
           id="tui-pagination-container1"
           class="tui-pagination pagin-popular"
         ></div>
-        <div
-          id="tui-pagination-container2"
-          class="tui-pagination pagin-search"
-        ></div>
+        <button type="button" class="load-more">Load more</button>
         <include src="./partials/tui_loader.html"></include>
       </div>
     </main>
