--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,7 @@
         </div>
       </section>
     </main>
+    <include src="./partials/changetheme.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/upbutton.html"></include>
