--- a/src/library.html
+++ b/src/library.html
@@ -69,6 +69,7 @@
       </section>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/changetheme.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/team.html"></include>
     <include src="./partials/upbutton.html"></include>
