--- a/src/index.html
+++ b/src/index.html
@@ -74,15 +74,11 @@
       <section class="main-section">
         <div class="container">
           <div class="gallery"></div>
-          <div class="movie-list"></div>
           <div
             id="tui-pagination-container1"
             class="tui-pagination pagin-popular"
           ></div>
-          <div
-            id="tui-pagination-container2"
-            class="tui-pagination pagin-search"
-          ></div>
+          <button type="button" class="load-more">Load more</button>
           <include src="./partials/tui_loader.html"></include>
         </div>
       </section>
