--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
     <main>
       <section class="main-section">
         <div class="container">
+          <h3 class="visually-hidden">Filmoteka</h3>
           <div class="gallery"></div>
           <div
             id="tui-pagination-container1"
