--- a/src/library.html
+++ b/src/library.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,6 +55,7 @@
     <main>
       <section class="main-section">
         <div class="container">
+          <h3 class="visually-hidden">Filmoteka</h3>
           <div class="gallery__library-watched"></div>
           <div class="gallery__library-queue visually-hidden"></div>
           <include src="./partials/tui_loader.html"></include>
